--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>hugo hugo</title>
+  <title>hugo的个人网站</title>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+  <meta name="applicable-device"content="pc,mobile"/>
+  <link rel="stylesheet" href="/images/new.css">
   <style type="text/css">
   a{
     color: rgb(181,181,181);
@@ -18,24 +21,24 @@
   </style>
 </head>
 <body style="padding: 0px;margin: 0px;">
-<div style="width: 100%;background-color: rgb(44,60,73);padding-left: 50px;color:white;line-height: 50px; ">
-  Hugo的个人网站
+<div  class="header">
+  <a href="/" style="color: white">Hugo的个人网站</a>
 </div>
-<div style="width: 100%;height: 40px;display: flex;flex-direction: row;justify-content:flex-start;align-items: center;background-color: rgb(236,236,236);">
+<div class="secondheader">
   <a href="https://github.com/hugo-xie">Home</a>
   <a href="https://github.com/hugo-xie">Github</a>
   <a href="https://github.com/hugo-xie">ZhiHu</a>
   <a href="https://github.com/hugo-xie">DouBan</a>
   <a href="https://github.com/hugo-xie">WeiBo</a>
 </div>
-<div style="display: flex;flex-direction: row;background-color: rgb(44,60,73)">
-  <div style="width: 65%;display: flex;flex-direction: row;justify-content: center;align-items: center;" id="content1">
+<div class="maincontent">
+  <div id="content1" class="intro">
     <div style="width: 80%;background-image: url(/images/intro.jpg);background-size: 100% 100%;display: flex;flex-direction: column-reverse;justify-content: flex-start;" id="content3">
       <span style="margin:0px 0px 20px 10%;color: rgb(181,181,181);">生活不止眼前的苟且，还有诗和远方的田野</span>
       <h2 style="color: rgb(181,181,181);margin-left: 10%">技术.感想.生活</h2>
     </div>
   </div>
-  <div style="width: 35%;" id="content2">{{content}}</div>
+  <div class="postblog" id="content2">{{content}}</div>
 </div>
 <script type="text/javascript">
   var content1 = document.getElementById('content1');
@@ -46,7 +49,6 @@
   content1.style.height = height+'px';
   content2.style.height = height+'px';
   content3.style.height = height2+'px';
-  console.log(main[0].style.height);
 </script>
 </body>
 </html>
