网站页面完善

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,10 +25,10 @@
   <a href="/" style="color: white">Hugo的个人网站</a>
 </div>
 <div class="secondheader">
-  <a href="https://github.com/hugo-xie">Home</a>
+  <a href="/">Home</a>
   <a href="https://github.com/hugo-xie">Github</a>
   <a href="https://github.com/hugo-xie">ZhiHu</a>
-  <a href="https://github.com/hugo-xie">DouBan</a>
+  <a href="https://book.douban.com/mine?icn=index-nav">DouBan</a>
   <a href="https://github.com/hugo-xie">WeiBo</a>
 </div>
 <div class="maincontent">
@@ -38,7 +38,7 @@
       <h2 style="color: rgb(181,181,181);margin-left: 10%">技术.感想.生活</h2>
     </div>
   </div>
-  <div class="postblog" id="content2">{{content}}</div>
+  <div class="postblog" id="content2"><div>{{content}}</div></div>
 </div>
 <script type="text/javascript">
   var content1 = document.getElementById('content1');
